Modified many of the tests in the testing suite for the new bibulous.py.
The primary change here is to incorporate namelist templates into the BST files. This allows removing of half of the keyword definitions.

--- a/test/test3_authorextract.bib
+++ b/test/test3_authorextract.bib
@@ -1,5 +1,5 @@
 @ARTICLE{Tukey:1949:MSFa,
-  authorlist = {[{u'middle': u'W.', u'last': u'Tukey', u'first': u'John'}]},
+  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
   acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
   journal = {The American Statistician},
@@ -10,7 +10,6 @@
   volume = {3},
   ASnumber = {22},
   ISSN-L = {0003-1305},
-  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   year = {1949},
   PMnumber = {32},
   title = {Memorandum on statistics in the {Federal Government}, {Part I}},
@@ -20,7 +19,7 @@
 }
 
 @ARTICLE{Tukey:1986:SS,
-  authorlist = {[{u'middle': u'W.', u'last': u'Tukey', u'first': u'John'}]},
+  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
   acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
   journal = {The American Statistician},
@@ -31,7 +30,6 @@
   volume = {40},
   ASnumber = {137},
   ISSN-L = {0003-1305},
-  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   year = {1986},
   PMnumber = {308},
   title = {Sunset salvo},
@@ -53,7 +51,6 @@
   month = {6},
   volume = {39},
   pages = {517--518},
-  authorlist = {[{u'middle': u'W.', u'last': u'Tukey', u'first': u'John'}]},
   xxtitle = {Comments on {{\em Projection pursuit}}},
   year = {1985},
   PMnumber = {286},
@@ -64,7 +61,7 @@
 }
 
 @ARTICLE{Tukey:1965:TTSb,
-  authorlist = {[{u'middle': u'W.', u'last': u'Tukey', u'first': u'John'}]},
+  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
   acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
   journal = {The American Statistician},
@@ -75,7 +72,6 @@
   volume = {19},
   ASnumber = {94},
   ISSN-L = {0003-1305},
-  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   year = {1965},
   PMnumber = {139},
   title = {The technical tools of statistics},
@@ -86,7 +82,7 @@
 
 @ARTICLE{McGill:1978:VBP,
   remark = {McCullagh bibliography duplicates this entry.},
-  authorlist = {[{u'last': u'McGill', u'first': u'R.'}, {u'middle': u'W.', u'last': u'Tukey', u'first': u'John'}, {u'middle': u'A.', u'last': u'Larsen', u'first': u'W.'}]},
+  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
   acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
   journal = {The American Statistician},
@@ -97,7 +93,6 @@
   volume = {32},
   ASnumber = {123},
   ISSN-L = {0003-1305},
-  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   year = {1978},
   PMnumber = {231, 234},
   title = {Variations of {Box} plots},
@@ -107,7 +102,7 @@
 }
 
 @ARTICLE{Rousseeuw:1999:BBB,
-  authorlist = {[{u'middle': u'J.', u'last': u'Rousseeuw', u'first': u'Peter'}, {u'last': u'Ruts', u'first': u'Ida'}, {u'middle': u'W.', u'last': u'Tukey', u'first': u'John'}]},
+  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   bibsource = {http://www.amstat.org/publications/tas/toc_99.html; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
   acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
   journal = {The American Statistician},
@@ -117,7 +112,6 @@
   month = {11},
   volume = {53},
   ISSN-L = {0003-1305},
-  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   year = {1999},
   title = {The Bagplot: {A} Bivariate Boxplot},
   pages = {382--??},
@@ -126,7 +120,7 @@
 }
 
 @ARTICLE{Almond:2000:DCG,
-  authorlist = {[{u'middle': u'G.', u'last': u'Almond', u'first': u'Russell'}, {u'last': u'Lewis', u'first': u'Charles'}, {u'middle': u'W.', u'last': u'Tukey', u'first': u'John'}, {u'last': u'Yan', u'first': u'Duanli'}]},
+  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   bibsource = {http://www.amstat.org/publications/tas/; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
   acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
   URL = {http://www.amstat.org/publications/tas/Almond.htm},
@@ -137,7 +131,6 @@
   month = {5},
   volume = {54},
   ISSN-L = {0003-1305},
-  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   year = {2000},
   title = {Displays for Comparing a Given State to Many Others},
   pages = {89--??},
@@ -146,7 +139,7 @@
 }
 
 @ARTICLE{Tukey:1980:WNB,
-  authorlist = {[{u'middle': u'W.', u'last': u'Tukey', u'first': u'John'}]},
+  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
   acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
   journal = {The American Statistician},
@@ -157,7 +150,6 @@
   volume = {34},
   ASnumber = {131},
   ISSN-L = {0003-1305},
-  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   year = {1980},
   PMnumber = {257},
   title = {We need both exploratory and confirmatory},
@@ -167,7 +159,7 @@
 }
 
 @ARTICLE{Tukey:1947:QIO,
-  authorlist = {[{u'middle': u'W.', u'last': u'Tukey', u'first': u'John'}]},
+  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
   acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
   journal = {The American Statistician},
@@ -178,7 +170,6 @@
   volume = {1},
   ASnumber = {17},
   ISSN-L = {0003-1305},
-  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   year = {1947},
   PMnumber = {17},
   title = {Question 4: Infinite observations},
@@ -188,7 +179,7 @@
 }
 
 @ARTICLE{Rathbun:1972:RPC,
-  authorlist = {[{u'middle': u'B.', u'last': u'Rathbun', u'first': u'Daniel'}, {u'middle': u'Allen', u'last': u'Wallis', u'first': u'W.'}, {u'last': u'Mosteller', u'first': u'Frederick'}, {u'middle': u'J.', u'last': u'Coale', u'first': u'Ansley'}, {u'middle': u'M.', u'last': u'Densen', u'first': u'Paul'}, {u'last': u'Fabricant', u'first': u'Solomon'}, {u'middle': u'D.', u'last': u'Fisher', u'first': u'Robert'}, {u'middle': u'Braddock', u'last': u'Hickman', u'first': u'W.'}, {u'last': u'Kruskal', u'first': u'William'}, {u'last': u'Lebergott', u'first': u'Stanley'}, {u'middle': u'M.', u'last': u'Scammon', u'first': u'Richard'}, {u'middle': u'H.', u'last': u'Shaw', u'first': u'William'}, {u'middle': u'D.', u'last': u'Stella', u'first': u'Frank'}, {u'middle': u'A.', u'last': u'Suffridge', u'first': u'James'}, {u'middle': u'W.', u'last': u'Tukey', u'first': u'John'}]},
+  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib; JSTOR database},
   acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
   URL = {http://www.jstor.org/stable/2682840},
@@ -199,7 +190,6 @@
   month = {2},
   volume = {26},
   ISSN-L = {0003-1305},
-  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   year = {1972},
   PMnumber = {none},
   title = {The Report of the {President's Commission on Federal Statistics}},
@@ -209,7 +199,7 @@
 }
 
 @ARTICLE{Tukey:1949:MSFb,
-  authorlist = {[{u'middle': u'W.', u'last': u'Tukey', u'first': u'John'}]},
+  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
   acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
   journal = {The American Statistician},
@@ -220,7 +210,6 @@
   volume = {3},
   ASnumber = {23},
   ISSN-L = {0003-1305},
-  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   year = {1949},
   PMnumber = {33},
   title = {Memorandum on statistics in the {Federal Government}, {Part II}},
@@ -231,7 +220,7 @@
 
 @ARTICLE{Tukey:1949:AQM,
   remark = {McCullagh bibliography duplicates this entry.},
-  authorlist = {[{u'middle': u'W.', u'last': u'Tukey', u'first': u'John'}]},
+  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
   acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
   journal = {The American Statistician},
@@ -242,7 +231,6 @@
   volume = {3},
   ASnumber = {33},
   ISSN-L = {0003-1305},
-  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   year = {1949},
   PMnumber = {34, 47},
   title = {Answer to question 21: Maximum likelihood estimates, efficiency},
@@ -252,7 +240,7 @@
 }
 
 @ARTICLE{Tukey:1985:CMI,
-  authorlist = {[{u'middle': u'W.', u'last': u'Tukey', u'first': u'John'}]},
+  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   bibsource = {http://www.math.utah.edu/pub/bibnet/authors/t/tukey-john-w.bib; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
   acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
   journal = {The American Statistician},
@@ -262,7 +250,6 @@
   month = {????},
   volume = {39},
   ISSN-L = {0003-1305},
-  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   year = {1985},
   PMnumber = {285},
   title = {Comments on {{\em More intelligent statistical software and statistical expert systems: Future directions}}},
@@ -272,7 +259,7 @@
 }
 
 @ARTICLE{Goodall:1998:CUR,
-  authorlist = {[{u'middle': u'R.', u'last': u'Goodall', u'first': u'Colin'}, {u'last': u'Kafadar', u'first': u'Karen'}, {u'middle': u'W.', u'last': u'Tukey', u'first': u'John'}]},
+  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   bibsource = {http://www.amstat.org/publications/tas/toc_98.html; http://www.math.utah.edu/pub/tex/bib/amstat.bib},
   acknowledgement = {Nelson H. F. Beebe, University of Utah, Department of Mathematics, 110 LCB, 155 S 1400 E RM 233, Salt Lake City, UT 84112-0090, USA, Tel: +1 801 581 5254, FAX: +1 801 581 4148, e-mail: \path|beebe@math.utah.edu|, \path|beebe@acm.org|, \path|beebe@computer.org| (Internet), URL: \path|http://www.math.utah.edu/~beebe/|},
   URL = {http://www.amstat.org/publications/tas/abstracts_98/goodall.html; http://www.jstor.org/stable/2685467},
@@ -284,7 +271,6 @@
   volume = {52},
   ASnumber = {162},
   ISSN-L = {0003-1305},
-  ISSN = {0003-1305 (print), 1537-2731 (electronic)},
   year = {1998},
   PMnumber = {423},
   title = {Computing and Using Rural versus Urban Measures in Statistical Applications},
@@ -295,7 +281,7 @@
 
 @INPROCEEDINGS{Karger:Scatter,
   publisher = {ACM Press},
-  authorlist = {[{u'last': u'Cutting', u'first': u'Douglas'}, {u'middle': u'R.', u'last': u'Karger', u'first': u'David'}, {u'last': u'Pedersen', u'first': u'Jan'}, {u'middle': u'W.', u'last': u'Tukey', u'first': u'John'}]},
+  doi = {http://doi.acm.org/10.1145/133160.133214},
   isbn = {0-89791-523-2},
   author = {Douglas Cutting and David R. Karger and Jan Pedersen and John W. Tukey},
   ps = {http://people.csail.mit.edu/karger/Papers/SIGIR92.ps},
@@ -303,11 +289,10 @@
   title = {Scatter/Gather: A Cluster-based Approach to Browsing Large Document Collections},
   venue = {SIGIR},
   month = {6},
-  doi = {http://doi.acm.org/10.1145/133160.133214},
   cat = {Information Retrieval},
+  location = {Copenhagen, Denmark},
   year = {1992},
   booktitle = {Proceedings of the  {$15^{th}$} Annual International {ACM} {SIGIR} Conference on Research and Development in Information Retrieval},
-  pages = {318-329},
-  location = {Copenhagen, Denmark}
+  pages = {318-329}
 }
 
