Added the .tex file to example2 in examples/ folder.

--- a/test/test1.bib
+++ b/test/test1.bib
@@ -470,3 +470,14 @@
   booktitle = {Geometric Computing with Clifford Algebras}
 }
 
+%% Test having only one editor and then "others" to see if Bibulous puts in "et al." correctly.
+@ANDOTHERS{andothers,
+    author = {R. Smolanzuk and J. Skalski and A. Sobiczewski},
+    title = {Masses and half-life of superheavy elements},
+    booktitle = {Proc.\ of the International Workshop 24 on Gross Properties of Nuclei and Nuclear Excitations},
+    editor = {H. Feldmeier and others},
+    address = {Darmstadt},
+    publisher = {GSI},
+    year = 1996,
+    pages = {35-42}
+} 
