Modified 'example2' in examples/ folder.

--- a/examples/example2.bib
+++ b/examples/example2.bib
@@ -82,7 +82,7 @@
 }
 @proceedings{Fichtel1977,
     editor = {C. E. Fichtel and F. W. Stecker},
-    booktitle = {The Structure and Content of the Galaxy and Galactic Gamma Rays},
+    title = {The Structure and Content of the Galaxy and Galactic Gamma Rays},
     address = {Washington, D.C.},
     publisher = {NASA},
     year = 1977
