Modified test4 in the testing suite to use a negative year in one entry to test code behavior.

--- a/test/test4.bib
+++ b/test/test4.bib
@@ -30,7 +30,7 @@
   title = {Nothing much},
   author = {AA bb and AA},
   volume = 2,
-  year = {0000}
+  year = {-1}
 }
 
 @ARTICLE{Thomson1848,
@@ -53,6 +53,7 @@
   title = {Sensors and Camera Systems for Scientific, Industrial, and Digital Photography Applications},
   year = {2000},
   volume = 6501,
+  publisher = {SPIE},
   editor = {Morley M. Blouke and Nitin Sampat and Williams, Jr., George M. and Thomas Yeh}
 }
 
