Added 'substr_replace' test to test1 of testing suite.

--- a/test/test1.bib
+++ b/test/test1.bib
@@ -354,7 +354,6 @@
   author = {Someone},
   title = {ユーザー別サイト
            体中文
-           크로스 플랫폼으로
 מדורים מבוקשים
 أفضل البحوث
            Σὲ γνωρίζω ἀπὸ
@@ -489,4 +488,14 @@
   year = 1985,
   address = {LOWERCASE},
   publisher = {sentencecase}
+}
+
+%% Test that the .substr_replace() operator is working.
+@SUBSTR_REPLACE{substr_replace,
+  author = {John W. Tukey},
+  journal = {The American Statistician},
+  volume = {40},
+  year = {1986},
+  title = {Sunset salvo},
+  pages = {72--76}
 }
