Added a Japanese name parsing check to test1.

--- a/test/test1.bib
+++ b/test/test1.bib
@@ -499,3 +499,12 @@
   title = {Sunset salvo},
   pages = {72--76}
 }
+
+@JAPANESE_NAME_SEPARATOR{japanese_name_separator,
+  author = {舩冨卓哉 豊浦正広 飯山将晃 角所考 美濃導彦},
+  title = {動物体三次元形状計測システム},
+  journal = {光アライアンス},
+  year = {2013},
+  volume = {24},
+  pages = {19--23}
+}
