Add test for .zfill() operator in test1.

--- a/test/test1.bib
+++ b/test/test1.bib
@@ -508,3 +508,10 @@
   volume = {24},
   pages = {19--23}
 }
+
+%% Test the .zfill() operator.
+@ZFILL{zfill,
+  author = {New Guy},
+  title = {Nothing special},
+  year = {5}
+}
