Added needed abbreviations to BIB file.

--- a/examples/example4.bib
+++ b/examples/example4.bib
@@ -1,3 +1,6 @@
+@String{ol       = {Opt. Lett.}}
+@String{procspie = {Proc. SPIE}}
+
 @Article{Tkaczyk2012,
   title = {Vectorial laws of refraction and reflection using the cross product and dot product},
   author = {Eric R. Tkaczyk},
