Fixed missing data in example4 BIB file.

--- a/examples/example4.bib
+++ b/examples/example4.bib
@@ -25,6 +25,7 @@
   pages = {139--159},
   publisher = {Princeton University Press},
   year = {1998},
+  booktitle = {Probing the Atom: Interactions of Coupled States, Fast Beams, and Loose Electrons},
   chapter = {6}
 }
 
@@ -34,6 +35,7 @@
   booktitle = {Quantum Implications --- Essays in Honour of {D}avid Bohm},
   publisher = {Routledge \& Kegan Paul},
   year = {1987},
+  pages = {235--248},
   editor = {B. J. Hiley and F. D. Peat}
 }
 
@@ -84,7 +86,7 @@
   author = {Louis-Victor de Broglie},
   school = {University of Paris},
   year = {1925},
-  note = {A translation by A. F. Kracklauer of the original, Recherches sur la th{\'e}orie des quanta, (Ann. de Phys., 10th series, v. III (Jan-Feb 1925).}
+  note = {A translation by A. F. Kracklauer of the original, Recherches sur la th{\'e}orie des quanta, (Ann. de Phys., 10th series, v. III, Jan-Feb 1925).}
 }
 
 @Poster{Jacquemart2012,
@@ -113,6 +115,7 @@
   author = {John Bohannon and Robin Goldstein and Alexis Herschkowitsch},
   institution = {American Association of Wine Economists},
   year = {2009},
+  number = {51757},
   month = {April}
 }
 
