Added BST and TEX files to example 3.

--- a/examples/example3.bib
+++ b/examples/example3.bib
@@ -1,56 +1,125 @@
-@article{1_126,
-    author = {伊原 彰紀 and 亀井 靖高 and 大平 雅雄 and 松本 健一 and 鵜林 尚靖},
-    title = {OSSプロジェクトにおける開発者の活動量を用いたコミッター候補者予測},
-    journal = {電子情報通信学会論文誌},
-    volume = {J95-D},
-    number = {2},
-    pages = {237-249},
-    month = {February},
-    year = {2012}
+@String{ol       = {Opt. Lett.}}
+@String{procspie = {Proc. SPIE}}
+
+@Article{Tkaczyk2012,
+  title = {Vectorial laws of refraction and reflection using the cross product and dot product},
+  author = {Eric R. Tkaczyk},
+  journal = ol,
+  volume = {37},
+  year = {2012},
+  pages = {972--974},
+  doi = {http://dx.doi.org/10.1364/OL.37.000972}
 }
 
-@article{Kanemura:2010a,
-    author = {兼村厚範 and 前田新一 and 福田航 and 石井信},
-    citeulike-article-id = {8118529},
-    journal = {信学誌},
-    keywords = {japanese, review},
-    month = sep,
-    number = {9},
-    pages = {759--763},
-    posted-at = {2010-10-24 17:37:43},
-    priority = {2},
-    title = {不確実性を手なずけるベイズ統計推測による画像超解像},
-    volume = {93},
-    year = {2010}
+@Book{Smith-1992,
+  title = {Modern Lens Design: A Resource Manual},
+  year = {1992},
+  address = {New York},
+  author = {Warren J. Smith},
+  publisher = {McGraw-Hill}
 }
 
-@inproceedings{Maeda:2010,
-    author = {前田新一 and 兼村厚範 and 石井信},
-    booktitle = {信学技法MI},
-    citeulike-article-id = {10061175},
-    posted-at = {2011-11-23 12:48:21},
-    priority = {2},
-    title = {医用X線CTのためのベイズモデルの提案},
-    year = {2010}
+@Inbook{Silverman1998,
+  title = {Optical detection theory},
+  author = {Mark Silverman},
+  pages = {139--159},
+  publisher = {Princeton University Press},
+  year = {1998},
+  booktitle = {Probing the Atom: Interactions of Coupled States, Fast Beams, and Loose Electrons},
+  chapter = {6}
 }
 
-@ARTICLE{動物体三次元形状計測システム,
-  author = {舩冨 卓哉 and 豊浦 正広 and 飯山 将晃 and 角所 考 and 美濃 導彦},
-  title = {動物体三次元形状計測システム},
-  journal = {光アライアンス},
-  year = {2013},
-  volume = {24},
-  number = {12},
-  month = {December},
-  pages = {19--23}
+@Incollection{Feynman1987,
+  title = {Negative probability},
+  author = {Richard P. Feynman},
+  booktitle = {Quantum Implications --- Essays in Honour of {D}avid Bohm},
+  publisher = {Routledge \& Kegan Paul},
+  year = {1987},
+  pages = {235--248},
+  editor = {B. J. Hiley and F. D. Peat}
 }
 
-@INPROCEEDINGS{映像ビッグデータの可視化と装着型カメラ映像からの動作解析,
-  author = {豊浦 正広},
-  title = {映像ビッグデータの可視化と装着型カメラ映像からの動作解析},
-  booktitle = {科学技術振興機構 新技術説明会 山梨大学},
-  year = {2013},
-  month = {November},
-  note = {Article 6}
+@Inproceedings{Descour1995a,
+  title = {Nonscanning no-moving-parts imaging spectrometer},
+  author = {Michael R. Descour and Eustace L. Dereniak},
+  booktitle = {Imaging Spectrometry},
+  year = {1995},
+  pages = {48--64},
+  series = {Proceedings of SPIE},
+  volume = {2480},
+  crossref = {ProcSPIE2480}
 }
 
+@Manual{CGAL2006,
+  title = {CGAL user and reference manual},
+  year = {2006},
+  month = {July},
+  organization = {CGAL Project}
+}
+
+@Mastersthesis{RimmerDiss,
+  title = {Optical aberration coefficients},
+  author = {Matthew Peter Rimmer},
+  school = {University of Rochester},
+  year = {1963}
+}
+
+@Misc{Knuth1992,
+  title = {Convolution polynomials},
+  author = {Donald E. Knuth},
+  year = {1992},
+  url = {http://arxiv.org/pdf/math/9207221.pdf}
+}
+
+@Patent{Bayer1976,
+  title = {Color imaging array},
+  author = {Bryce E. Bayer},
+  number = {3971065},
+  year = {1976},
+  yearfiled = {1975},
+  assignee = {Eastman Kodak Company},
+  nationality = {USA}
+}
+
+@Phdthesis{BroglieDiss,
+  title = {On the theory of quanta},
+  author = {Louis-Victor de Broglie},
+  school = {University of Paris},
+  year = {1925},
+  note = {A translation by A. F. Kracklauer of the original, Recherches sur la th{\'e}orie des quanta, (Ann. de Phys., 10th series, v. III, Jan-Feb 1925).}
+}
+
+@Poster{Jacquemart2012,
+  title = {The next HITRAN edition: description of new parameters and formats},
+  author = {David Jacquemart and Laurence S. Rothman},
+  address = {[location unknown]},
+  year = {2012}
+}
+
+@Presentation{Boyd2006,
+  title = {Convex optimization - class slides},
+  author = {Stephen Boyd and Lieven Vandenberghe},
+  year = {2006}
+}
+
+@Proceedings{ProcSPIE4480,
+  title = {Imaging Spectrometry VII},
+  year = {2002},
+  editor = {Michael R. Descour},
+  series = procspie,
+  volume = {4480}
+}
+
+@Techreport{Bohannon2009,
+  title = {Can people distinguish p{\^a}t{\'e} from dog food?},
+  author = {John Bohannon and Robin Goldstein and Alexis Herschkowitsch},
+  institution = {American Association of Wine Economists},
+  year = {2009},
+  number = {51757},
+  month = {April}
+}
+
+@Website{Zemax,
+  url = {www.zemax.com},
+  organization = {ZEMAX Development Corp.}
+}
