Minor corrections to example3.

--- a/examples/example3.bib
+++ b/examples/example3.bib
@@ -45,7 +45,7 @@
   booktitle = {Imaging Spectrometry},
   year = {1995},
   pages = {48--64},
-  series = {Proceedings of SPIE},
+  series = procspie,
   volume = {2480},
   crossref = {ProcSPIE2480}
 }
