Add a check (Warning #035) in parse_bibentry() for an empty entry.

--- a/test/test1.bib
+++ b/test/test1.bib
@@ -551,3 +551,8 @@
   title = {Blah blah},
   year = {4321}
 }
+
+%% Test having an entry with a closing brace in the key.
+@BADKEY{badkey},
+  author = {None}
+}
