Added a check in test1 for unbalanced []'s in style file special templates.

--- a/test/test1.bib
+++ b/test/test1.bib
@@ -556,3 +556,8 @@
 @BADKEY{badkey},
   author = {None}
 }
+
+%% Test having an entry with a malformed special tempate for defining the authorlist.
+@BADTEMPLATE{badtemplate,
+  author = {Z. None}
+}
