Added tests for .if_length_equals() operator in test1.

--- a/test/test1.bib
+++ b/test/test1.bib
@@ -552,6 +552,20 @@
   year = {4321}
 }
 
+%% Test that the .if_length_equals() operator is working.
+@IF_LENGTH_EQUALS1{if_length_equals1,
+  author = {Author One and Author Two and Author Three},
+  title = {Blah blah},
+  year = {4321}
+}
+
+%% Test that the .if_length_equals() operator is working.
+@IF_LENGTH_EQUALS2{if_length_equals2,
+  author = {Author One and Author Two and Author Three},
+  title = {Blah blah},
+  year = {4321}
+}
+
 %% Test having an entry with a closing brace in the key.
 @BADKEY{badkey},
   author = {None}
@@ -561,3 +575,4 @@
 @BADTEMPLATE{badtemplate,
   author = {Z. None}
 }
+
