--- a/test/test1.bib
+++ b/test/test1.bib
@@ -552,19 +552,19 @@
   year = {4321}
 }
 
-%% Test that the .if_length_equals() operator is working.
-@IF_LENGTH_EQUALS1{if_length_equals1,
-  author = {Author One and Author Two and Author Three},
-  title = {Blah blah},
-  year = {4321}
-}
-
-%% Test that the .if_length_equals() operator is working.
-@IF_LENGTH_EQUALS2{if_length_equals2,
-  author = {Author One and Author Two and Author Three},
-  title = {Blah blah},
-  year = {4321}
-}
+% %% Test that the .if_length_equals() operator is working.
+% @IF_LENGTH_EQUALS1{if_length_equals1,
+%   author = {Author One and Author Two and Author Three},
+%   title = {Blah blah},
+%   year = {4321}
+% }
+%
+% %% Test that the .if_length_equals() operator is working.
+% @IF_LENGTH_EQUALS2{if_length_equals2,
+%   author = {Author One and Author Two and Author Three},
+%   title = {Blah blah},
+%   year = {4321}
+% }
 
 %% Test having an entry with a closing brace in the key.
 @BADKEY{badkey},
