Added a test to test1 to use the new flexible namelists. And also changes tests to use an extra newline between entries.

--- a/test/test1.bib
+++ b/test/test1.bib
@@ -582,3 +582,12 @@
   year = {1869}
 }
 
+@ANY_NAMELIST{any_namelist,
+  author = "Iris Beck and Heinrich Greving",
+  title = "My journey through bibliographies",
+  year = "2012",
+  booktitle = "My Bibliography Book",
+  editor = "Philip Anderson",
+  bookauthor = "Heinz Brinkmann"
+}
+
